# header list
SET(PVM_HDRS
   ddsbase.h
   )

# module list
SET(PVM_SRCS
   ddsbase.cpp
   )

# Windows definitions
IF (MSVC)
   ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
ENDIF (MSVC)

# library
SET(PVM_NAME PVM)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../headers)
ADD_LIBRARY(${PVM_NAME} ${PVM_SRCS} ${PVM_HDRS})
SET(PVM_LIBRARY ${PVM_NAME} CACHE INTERNAL "")
